[package]
name = "zeitfresser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.19", features = ["serde"] }
directories-next = "2.0.0"
clap = "3.1.18"
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.81"
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
